--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Assistant|Oswald&display=swap')
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
 
