Initial minor tweaks. Mostly stashed to switch dev machines. XD

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -7,7 +7,7 @@ $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
-$body-color: #333
+$body-color: whitesmoke
 $black: #2b2523
 
 .navbar .navbar-menu
