--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -134,7 +134,6 @@ a:hover
   color: #3273dc
 
 .navbar, .navbar-menu
-  background-color: rgb(11, 49, 96)
   font-weight: bold
 
 .navbar a
@@ -145,6 +144,12 @@ a:hover
 
 .navbar-item img
   max-height: 200px
+
+.header
+  display: flex
+  height: 300px
+  background-repeat: repeat-x
+  background-size: contain
 
 footer.footer
   color: white
