--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -147,9 +147,29 @@ a:hover
 
 .header
   display: flex
+  flex: 1
+  flexDirection: row
   height: 300px
   background-repeat: repeat-x
   background-size: contain
+
+// Default to 0px, and it will be changed with +mobile.
+.header-logo-banner
+  width: 0px
+  height: 300px
+
+.header-logo
+  height: 300px
+
+.header-banner
+  max-width: 650px
+
+.header-top
+  height: 74px
+
+.header-container
+  flex-direction: column
+  display: flex
 
 footer.footer
   color: white
@@ -163,6 +183,8 @@ footer.footer a
 +tablet-only
   .blog-list-item .featured-thumbnail
     flex-basis: 50%;
+  .header-mobile
+    width: 0px;
 
 +mobile
   .blog-list-item header
@@ -171,3 +193,9 @@ footer.footer a
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+  .header-logo-banner
+    width: auto;
+  .header-logo
+    display: none !important;
+  .header-banner
+    display: none !important;
