--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -147,8 +147,8 @@ a:hover
 
 .header
   display: flex
+  justify-content: center
   flex: 1
-  flexDirection: row
   height: 300px
   background-repeat: repeat-x
   background-size: contain
