--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -179,6 +179,12 @@ footer.footer
 footer.footer a
   color: white
 
+.social-media
+
+.social-media img
+  height: 50px
+  margin: 16px
+
 // responsiveness
 +tablet-only
   .blog-list-item .featured-thumbnail
