fix CSS for mobile nav menu

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -199,3 +199,5 @@ footer.footer a
     display: none !important;
   .header-banner
     display: none !important;
+  .navbar-menu
+    background-color: #16356f;
