Add call to action buttons.
Screenshot: https://slack-files.com/T010PQGP4UQ-F010WFH5HFX-f1cdeed04c

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,4 +1,5 @@
 @import "~bulma/sass/utilities/initial-variables"
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
 // Config vars
 // Kaldi logo brand color: #FD461E
@@ -170,6 +171,23 @@ a:hover
 .header-container
   flex-direction: column
   display: flex
+
+.call-to-action
+  display: flex
+  justify-content: center
+  flex-wrap: wrap
+  background-color: rgb(13, 50, 95)
+
+.call-to-action a
+  font-size: 3em
+  font-family: 'Oswald', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  color: rgb(13, 50, 95)
+  margin: 16px
+  padding: 4px
+  min-width: 340px;
+  background-color: rgb(234, 204, 98)
 
 footer.footer
   color: white
