Update background to smoky white and text to black.

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -127,8 +127,8 @@ $menu-label-color: $white-ter
 
 //hacking in some overrides below, requires improvement
 body
-  color: white
-  background-color: rgb(11, 49, 96)
+  color: black
+  background-color: #F5F5F5
 
 a:hover
   color: #3273dc
@@ -140,7 +140,7 @@ a:hover
   color: white
 
 .navbar-burger, .content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .title
-  color: white
+  color: black
 
 .navbar-item img
   max-height: 200px
@@ -178,6 +178,12 @@ footer.footer
 
 footer.footer a
   color: white
+
+.social-media
+
+.social-media img
+  height: 50px
+  margin: 16px
 
 // responsiveness
 +tablet-only
