Final UX fixes requested by Ceq
...and I'm holder her to it...

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -137,11 +137,19 @@ a:hover
 .navbar, .navbar-menu
   font-weight: bold
 
-.navbar a
+.navbar a, .navbar-burger
   color: white
 
-.navbar-burger, .content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .title
-  color: white
+.content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .title
+  color: black
+
+.navbar-item
+  font-family: 'Oswald', sans-serif
+  font-size: 1.5em
+
+.navbar-start
+  padding-left: 32px
+  padding-top: 8px
 
 .navbar-item img
   max-height: 200px
