Update main body font

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,5 +1,6 @@
 @import "~bulma/sass/utilities/initial-variables"
-@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Assistant&display=swap')
 
 // Config vars
 // Kaldi logo brand color: #FD461E
@@ -130,6 +131,7 @@ $menu-label-color: $white-ter
 body
   color: black
   background-color: #F5F5F5
+  font-family: 'Assistant', sans-serif
 
 a:hover
   color: #3273dc
