cleans up the footer

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -211,6 +211,10 @@ footer.footer a
   height: 50px
   margin: 16px
 
+.external-links
+  margin: 1em
+  font-size: 0.85rem
+
 // responsiveness
 +tablet-only
   .blog-list-item .featured-thumbnail
