update colors and icons to brand colors

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,6 +11,8 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
+$navbar-background: #16356f
+
 .navbar .navbar-menu
   box-shadow:none !important
 
@@ -226,7 +228,7 @@ footer.footer a
   transition: background-color 0.25s ease-out
 
 .social-media a.social-media-icon:hover
-  color: $kaldi-red
+  color: $navbar-background
   background-color: $kaldi-red-invert
   
 
