Optimize images with gatsby-image

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -168,8 +168,7 @@ a:hover
 
 // Default to 0px, and it will be changed with +mobile.
 .header-logo-banner
-  width: 0px
-  height: 300px
+  display: none;
 
 .header-logo
   height: 300px
@@ -265,6 +264,7 @@ footer.footer a
     margin: 0 0 1em;
   .header-logo-banner
     width: auto;
+    display: block;
   .header-logo
     display: none !important;
   .header-banner
