Revert changes pushed to master

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -168,7 +168,8 @@ a:hover
 
 // Default to 0px, and it will be changed with +mobile.
 .header-logo-banner
-  display: none;
+  width: 0px
+  height: 300px
 
 .header-logo
   height: 300px
@@ -264,7 +265,6 @@ footer.footer a
     margin: 0 0 1em;
   .header-logo-banner
     width: auto;
-    display: block;
   .header-logo
     display: none !important;
   .header-banner
