change CTA button color #72

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -194,11 +194,13 @@ a:hover
   font-family: 'Oswald', sans-serif;
   font-weight: bold;
   text-align: center;
-  color: rgb(13, 50, 95)
+  color: rgb(234, 204, 98)
   margin: 16px
   padding: 4px
   min-width: 340px;
-  background-color: rgb(234, 204, 98)
+  background-color: rgb(13, 50, 95)
+.call-to-action a:hover
+  color: white
 
 footer.footer
   color: white
