Removed extra semi-colons

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -119,13 +119,13 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #d6400033
 .blog-list-item header
-  display: flex;
-  margin-bottom: 1em;
+  display: flex
+  margin-bottom: 1em
 .blog-list-item .featured-thumbnail
-  flex-basis: 35%;
-  margin: 0 1.5em 0 0;
+  flex-basis: 35%
+  margin: 0 1.5em 0 0
 
 
 @import "~bulma"
@@ -169,7 +169,7 @@ a:hover
 
 // Default to 0px, and it will be changed with +mobile.
 .header-logo-banner
-  display: none;
+  display: none
 
 .header-logo
   height: 300px
@@ -195,7 +195,7 @@ a:hover
   align-items: flex-start
   color: rgb(13, 50, 95)
   font-weight: bold
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Oswald', sans-serif
   font-size: 2.5em
   max-width: 400px
 
@@ -215,10 +215,10 @@ a:hover
   display: flex
   flex-direction: column
   justify-content: center
-  max-width: 500px;
-  height: 50px;
-  position: relative;
-  background-color: $kaldi-red;
+  max-width: 500px
+  height: 50px
+  position: relative
+  background-color: $kaldi-red
   text-align: center
   font-weight: bold
   font-family: 'Oswald', sans-serif
@@ -228,26 +228,26 @@ a:hover
   color: white
 
 .ribbon:after
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-left: 10px solid $smoky-white;
-  border-top: 25px solid $kaldi-red;
-  border-bottom: 25px solid transparent;
+  content: ""
+  position: absolute
+  left: 0
+  bottom: 0
+  width: 0
+  height: 0
+  border-left: 10px solid $smoky-white
+  border-top: 25px solid $kaldi-red
+  border-bottom: 25px solid transparent
 
 .ribbon:before
-  content: "";
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-right: 10px solid $smoky-white;
-  border-top: 25px solid $kaldi-red;
-  border-bottom: 25px solid transparent;
+  content: ""
+  position: absolute
+  right: 0
+  bottom: 0
+  width: 0
+  height: 0
+  border-right: 10px solid $smoky-white
+  border-top: 25px solid $kaldi-red
+  border-bottom: 25px solid transparent
 
 .centered
   display: flex
@@ -319,9 +319,9 @@ footer.footer a
 // responsiveness
 +tablet-only
   .blog-list-item .featured-thumbnail
-    flex-basis: 50%;
+    flex-basis: 50%
   .header-mobile
-    width: 0px;
+    width: 0px
   .navbar-menu
     background-color: #16356f
 
@@ -329,21 +329,21 @@ footer.footer a
   .blog-list-item header
     display: block
   .blog-list-item .featured-thumbnail
-    text-align: center;
-    max-width: 70%;
-    margin: 0 0 1em;
+    text-align: center
+    max-width: 70%
+    margin: 0 0 1em
   .header-logo-banner
-    width: auto;
-    display: block;
+    width: auto
+    display: block
   .header-logo
-    display: none !important;
+    display: none !important
   .header-banner
-    display: none !important;
+    display: none !important
   .navbar-menu
-    background-color: $navbar-background;
+    background-color: $navbar-background
   .main-page-columns
-    flex-direction: column-reverse;
-    display: flex;
+    flex-direction: column-reverse
+    display: flex
 
 .mobile-navbar
   position: fixed
