--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -89,14 +89,17 @@ $navbar-background: #16356f
   display: flex
   flex-direction: row
   justify-content: center
+  flex-wrap: wrap
 
 .big-button
+  color: rgb(14, 61, 119)
   font-size: 2.5em
   font-family: 'Oswald', sans-serif
   font-weight: bold
   text-align: center
   padding: 4px
-  min-width: 340px;
+  min-width: 340px
+  margin: 0 0 1em
 
 .big-button a
   color: rgb(14, 61, 119)
