--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -4,7 +4,7 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+$kaldi-red: #b03619
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
