--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -333,6 +333,11 @@ footer.footer a
 .mobile-navbar .navbar-start a.navbar-item:active
   color: $kaldi-red
 
+  a.active
+    color: $kaldi-red
+    background-color: $navbar-background
+
+
 .mobile-navbar.is-active .mobile-backdrop:hover
   cursor: pointer
 
