--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -207,9 +207,11 @@ a:hover
   height: 74px
   z-index: 10  // nav bar menu needs to appear over banner.
 
-.header-container
+.header-container 
   flex-direction: column
   display: flex
+  position: relative
+  right: 20px
 
 .call-to-action
   display: flex
