remove direct links to pdfs - always use uploaded/attached version nwo.

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -172,7 +172,7 @@ a:hover
   color: white
 
 .content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .title
-  color: black
+  color: #16356f
 
 .navbar-item
   font-family: 'Oswald', sans-serif
