--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -181,6 +181,7 @@ a:hover
 .navbar-start
   padding-left: 32px
   padding-top: 8px
+  align-items: baseline
 
 .navbar-item img
   max-height: 200px
@@ -207,7 +208,7 @@ a:hover
   height: 74px
   z-index: 10  // nav bar menu needs to appear over banner.
 
-.header-container 
+.header-container
   flex-direction: column
   display: flex
   position: relative
